Updated Portolio Website

--- a/index.html
+++ b/index.html
@@ -151,7 +151,25 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="col">
+                            <div class="card" data-aos="zoom-in" data-aos-duration="1000">
+                                <h5 class="card-title">Bootstrap</h5>
+                                <img src="images/youtube/logo.png" class="card-img-top" alt="...">
+                                <div class="card-footer">
+                                    <a href="youtube.html" class="btn btn-primary">More information</a>
+                                </div>
+                            </div>
+                        </div>
 
+                        <div class="col">
+                            <div class="card" data-aos="zoom-in" data-aos-duration="1000">
+                                <h5 class="card-title">Vr_Game</h5>
+                                <img src="images/Vr_Game/VrGame_Logo.jpg" class="card-img-top" alt="...">
+                                <div class="card-footer">
+                                    <a href="vrgame.html" class="btn btn-primary">More information</a>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
