--- a/webshop.html
+++ b/webshop.html
@@ -21,11 +21,11 @@
         </div>
         <div class="buttons">
             <a href="projectdata.html" class="back btn">previous</a>
-            <a href="platformer.html" class="next btn">next</a>
+            <a href="youtube.html" class="next btn">next</a>
         </div>
         <div class="window">
             <div class="textwindow">
-                <h1>WebshopProject</h1>
+                <h1>Information</h1>
                 <h2>English</h2>
                 <p>For this school assignment I made a simple javascript webshop.</p>
                 <p>I have created a constructor so that I can create an infinite number of products. If there are no
