--- a/platformer.html
+++ b/platformer.html
@@ -26,7 +26,7 @@
 
         </div>
         <div class="buttons">
-            <a href="webshop.html" class="back btn">previous</a>
+            <a href="vrgame.html" class="back btn">previous</a>
             <a href="projectarcade.html" class="next btn">next</a>
         </div>
         <div class="images">
