--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <script>
         AOS.init();
     </script>
+    
     <section class="TopContainer">
         <nav class="navbar">
             <div class="title">
@@ -167,6 +168,16 @@
                                 <img src="images/Vr_Game/VrGame_Logo.jpg" class="card-img-top" alt="...">
                                 <div class="card-footer">
                                     <a href="vrgame.html" class="btn btn-primary">More information</a>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col">
+                            <div class="card" data-aos="zoom-in" data-aos-duration="1000">
+                                <h5 class="card-title">Steentijd Expositie</h5>
+                                <img src="images/expo/logo.png" class="card-img-top" alt="...">
+                                <div class="card-footer">
+                                    <a href="Expositie.html" class="btn btn-primary">More information</a>
                                 </div>
                             </div>
                         </div>
