--- a/vrgame.html
+++ b/vrgame.html
@@ -26,7 +26,7 @@
         </div>
         <div class="buttons">
             <a href="youtube.html" class="back btn">previous</a>
-            <a href="platformer.html" class="next btn">next</a>
+            <a href="Expositie.html" class="next btn">next</a>
         </div>
         <div class="images">
             <img src="images/Vr_Game/VrGame_Logo.jpg">
