--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                         <div class="col">
                             <div class="card" data-aos="zoom-in" data-aos-duration="1000">
                                 <h5 class="card-title">Steentijd Expositie</h5>
-                                <img src="images/expo/logo.png" class="card-img-top" alt="...">
+                                <img src="images/expo/click.png" class="card-img-top" alt="...">
                                 <div class="card-footer">
                                     <a href="Expositie.html" class="btn btn-primary">More information</a>
                                 </div>
