--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 </button>
                 <div id="header--image">
                 <p>Luuk de Vos</p>
-                <img src="/img/Header-background-03.png" alt="Welcome">
+                <img src="../img/Header-background-03.png" alt="Welcome">
               </div>
             </div>
               <div class="intro--options">
