--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 </button>
                 <div id="header--image">
                 <p>Luuk de Vos</p>
-                <img src="../img/Header-background-03.png" alt="Welcome">
+                <img src="img/Header-background-03.png" alt="Welcome">
               </div>
             </div>
               <div class="intro--options">
@@ -194,7 +194,7 @@
 </div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
-<script src="/assets/js/cookies.js"></script>
+<script src="assets/js/cookies.js"></script>
 <script>window.jQuery || document.write('<script src="assets/js/vendor/jquery-2.2.4.min.js"><\/script>')</script>
 <script src="assets/js/functions-min.js"></script>
 <!-- <script src="assets/js/functions.js"></script> -->
