--- a/old site/ddwTour.html
+++ b/old site/ddwTour.html
@@ -5,15 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project Data</title>
+    <title>DDW Tour</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cantarell:ital,wght@1,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@700&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" type="image/x-icon" href="images/ProjectData/logo.png">
+    <link rel="shortcut icon" type="image/x-icon" href="images/ddwTour/Logo.png">
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="styles/projectdata.css">
-    <script src="https://kit.fontawesome.com/d2785ef616.js" crossorigin="anonymous"></script>\
+    <script src="https://kit.fontawesome.com/d2785ef616.js" crossorigin="anonymous"></script>
     <script src="js/portfoliopage.js"></script>
 </head>
 
@@ -21,19 +21,19 @@
     <section class="topcontainer">
         <div class="toppp">
             <a href="../index.html" class="home">back</a>
-            <h1 class="title">Project Data</h1>
+            <h1 class="title">DDW Tour</h1>
 
         </div>
         <div class="buttons">
-            <a href="projectarcade.html" class="back btn"> 🢀 previous</a>
-            <a href="Expositie.html" class="next btn">next 🢂</a>
+            <a href="Expositie.html" class="back btn"> 🢀 previous</a>
+            <a href="RabbitSimulator.html" class="next btn">next 🢂</a>
         </div>
         <div class="images">
-            <img src="images/ProjectData/logonew.png">
+            <img src="images/ddwTour/Logo.png">
         </div>
         <div class="window">
             <div class="textwindow">
-                <h1>Project Data</h1>
+                <h1>DDW Tour</h1>
                 <p>For our school project, we've crafted an intriguing application designed to provide users with a
                     unique perspective on their Spotify data. So far, we've received survey responses from 89
                     participants who've contributed to our project's success.
@@ -77,10 +77,10 @@
                 </p>
             </div>
             <div class="imagewindow">
-                <img src="images/ProjectData/concept.png" alt="">
+                <img src="images/ddwTour/DDWImg01.jpeg" alt="">
             </div>
             <div class="imagewindow">
-                <iframe width="420" height="315" src="https://www.youtube.com/embed/IQ1eACFMn_c">
+                <iframe width="420" height="315" src="https://www.youtube.com/embed/Wl_gxgRQ-Ik">
                 </iframe>
             </div>
         </div>
