--- a/old site/platformer.html
+++ b/old site/platformer.html
@@ -21,13 +21,13 @@
 <body>
     <section class="topcontainer">
         <div class="toppp">
-            <a href="index.html#portfoliogalery" class="home">back</a>
+            <a href="../index.html" class="home">back</a>
             <h1 class="title">Platformer</h1>
 
         </div>
         <div class="buttons">
-            <a href="vrgame.html" class="back btn">previous</a>
-            <a href="projectarcade.html" class="next btn">next</a>
+            <a href="vrgame.html" class="back btn"> 🢀 previous</a>
+            <a href="projectarcade.html" class="next btn">next 🢂</a>
         </div>
         <div class="images">
             <img src="images/Platformer/logonew.png">
@@ -36,26 +36,20 @@
         <div class="window">
             <div class="textwindow">
                 <h1>Information</h1>
-                <h2>English</h2>
-                <p>For this school assignment i made a platformer game like mario. I chose to make everything
-                    from a square because I'm not very good at visualizing games. This game had to be played on an
-                    arcade cabinet</p>
-                <p>There are 2 joysticks on this arcade cabinet. The left joystick breaks you to walk around and the
-                    right one to aim.
-                    I also chose that you can only jump if you had your bullet with you.
-                    If you shot you had to retrieve your bullet before you could jump further.
-                    this made the game very funny and difficult.</p>
-
-                <br>
-                <h2>Nederlands</h2>
-                <p>Voor deze schoolopdracht heb ik een platformer spel maken zoals mario. Ik heb gekozen om alles van
-                    een vierkant te maken want ik ben niet zo goed in het visueele gebeuren van spellen. Dit spel moest
-                    op een arcade kast gespeeld kunnen worden</p>
-                <p>Op deze arcade kast zitten 2 joysticks. De linkerjoystick gebreuk je om rond te lopen en de rechter
-                    om te mikken.
-                    Ook heb ik ervoor gekozen dat je alleen kan springen als je je kogel bij had.
-                    Als je schoot moest je je kogel eerst weer ophalen voordat je verder kon springen.
-                    Dit zorgde ervoor dat het spel heel grappig en moeilijk werd.
+                <p>For a recent school assignment, I designed a platformer game akin to the iconic Mario series. Given
+                    my limited artistic abilities, I opted to craft the game using simple square elements. The unique
+                    twist I incorporated into the gameplay was that it would be played on an arcade cabinet equipped
+                    with two joysticks, offering a distinctive gaming experience.</p>
+                <p>The left joystick was designated for character movement, allowing players to navigate their character
+                    across the platformed world. Meanwhile, the right joystick served as a control for aiming, adding an
+                    extra layer of challenge and interaction.</p>
+                <p>One of the defining mechanics of my game was that players could only jump if they possessed a bullet.
+                    Shooting the bullet would consume it, and players needed to retrieve it in order to continue
+                    jumping. This dynamic added a delightful layer of complexity, making the game simultaneously
+                    enjoyable and challenging for players.</p>
+                <p>This combination of straightforward square-based visuals, dual joystick controls, and the unique
+                    bullet-jumping mechanism resulted in a game that provided an engaging and amusing experience on the
+                    arcade cabinet, sure to captivate players with its blend of simplicity and complexity.
                 </p>
             </div>
             <div class="imagewindow">
