--- a/old site/vrgame.html
+++ b/old site/vrgame.html
@@ -25,8 +25,8 @@
 
         </div>
         <div class="buttons">
-            <a href="youtube.html" class="back btn">previous</a>
-            <a href="Expositie.html" class="next btn">next</a>
+            <a href="RabbitSimulator.html" class="back btn"> 🢀 previous</a>
+            <a href="platformer.html" class="next btn">next 🢂</a>
         </div>
         <div class="images">
             <img src="images/Vr_Game/VrGame_Logo.jpg">
@@ -35,27 +35,15 @@
         <div class="window">
             <div class="textwindow">
                 <h1>Information</h1>
-                <h2>English</h2>
-                <p>For this school assignment I made a vr game.</p>
-                <p>It's the first time I've made a VR game.</p>
                 <p>
-
-                    I used my Oculus Quest. In the end I was the only one who made this assignment work and the only one who could present his/her project to the class.
-                    
-                    </p>
-                <p>The aim of the game is that piles of sand randomly appear on the island and if you dig it up, a treasure will come out for which you get points again.
-                    and so the game goes on indefinitely.
-                    </p>
-
-                <br>
-                <h2>Nederlands</h2>
-                <p>Voor deze schoolopdracht heb ik een vr spel gemaakt.</p>
-                    <p>Het is de eerste keer dat ik een vr spel gemaakt heb.</p>
-                    <p>Ik heb gebruik gemaakt van mijn Oculus Quest. Ik was uiteindelijk de enige die deze opdracht werkende had gemaakt en de enige die zijn / haar project kon presenteren aan de klas.</p>
-                    <p>De bedoeling van het spel is dat er willekeurig op het eiland hoopjes zand te voor schijn komen en als je het opgraaft komt er een schat uit waar je weer punten voor krijgt.
-                        en zo gaat het spel oneindig verder.
-                    </p>
-                </div>
+                    For my recent school assignment, I created my first VR game using the Oculus Quest. The game is set
+                    on a tranquil island where piles of sand randomly emerge. When players dig up these sand piles, they
+                    discover hidden treasures, earning points. </p>
+                <p>The beauty of this game is its infinite replayability, ensuring players can keep exploring and
+                    accumulating points. I tackled the project independently and had the privilege of presenting it to
+                    the class. This experience has not only fulfilled the assignment requirements but has also ignited
+                    my passion for VR game development.</p>
+            </div>
             <div class="imagewindow">
                 <iframe width="420" height="315" src="https://www.youtube.com/embed/qWqMUb2x1bc?start=1">
                 </iframe>
