--- a/old site/Expositie.html
+++ b/old site/Expositie.html
@@ -25,13 +25,13 @@
 
         </div>
         <div class="buttons">
-            <a href="vrgame.html" class="back btn">previous</a>
-            <a href="platformer.html" class="next btn">next</a>
+            <a href="projectdata.html" class="back btn"> 🢀 previous</a>
+            <a href="ddwTour.html" class="next btn">next 🢂</a>
         </div>
         <div class="images">
             <a href="https://www.behance.net/gallery/143557319/Steentijd">
-            <img src="images/expo/click.png">
-        </a>
+                <img src="images/expo/click.png">
+            </a>
         </div>
 
         <div class="window">
@@ -40,25 +40,18 @@
                 <h2>English</h2>
                 <p>For this school assignment I made an exposition for the Stone Age.</p>
                 <p>
-                    It's the first time I've made a product for a company. I also worked with the third year students during this project.</p>
+                    It's the first time I've made a product for a company. I also worked with the third year students
+                    during this project.</p>
                 <p>
-                    The intention was that we offer visual support to the company for their exhibition about the Stone Age.
-                    </p>
+                    The intention was that we offer visual support to the company for their exhibition about the Stone
+                    Age.
+                </p>
                 <p>I had a very nice group and assignment.
                     in the end I didn't learn much from programming, but from art and working in a team.
-                    </p>
-                    <p>
-                        Here you can see the memory game I made for this project</p>
-                <br>
-                <h2>Nederlands</h2>
-                <p>Voor deze schoolopdracht heb ik een expositie voor de steentijd gemaakt.</p>
-                    <p>Het is de eerste keer dat ik een product voor een bedrijf heb gemaakt. Ook heb ik tijdens dit project samen met de derdejaars gewerkt.</p>
-                    <p>De bedoeling was dat wij visuele ondersteuning aanbieden aan het bedrijf voor hun expositie over de steentijd.</p>
-                    <p>Ik had een heel leuk groepje en opdracht.
-                        uiteindelijk heb ik niet veel geleerd van programmeren maar wel van art en in een team werken.
-                    </p>
-                    <p>Hiernaast kan je de memory game zien die ik gemaakt heb voor dit project</p>
-                </div>
+                </p>
+                <p>
+                    Here you can see the memory game I made for this project</p>
+            </div>
             <div class="imagewindow">
                 <iframe width="420" height="315" src="https://www.youtube.com/embed/InHSbft03Go">
                 </iframe>
