--- a/old site/projectarcade.html
+++ b/old site/projectarcade.html
@@ -20,13 +20,13 @@
 <body>
     <section class="topcontainer">
         <div class="toppp">
-            <a href="index.html#portfoliogalery" class="home">back</a>
+            <a href="../index.html" class="home">back</a>
             <h1 class="title">ProjectArcade</h1>
 
         </div>
         <div class="buttons">
-            <a href="platformer.html" class="back btn">previous</a>
-            <a href="projectdata.html" class="next btn">next</a>
+            <a href="platformer.html" class="back btn"> 🢀 previous</a>
+            <a href="projectdata.html" class="next btn">next 🢂</a>
         </div>
         <div class="images">
             <img src="images/ProjectArcade/logonew.png">
@@ -35,26 +35,21 @@
         <div class="window">
             <div class="textwindow">
                 <h1>Information</h1>
-                <h2>English</h2>
-                <p>For this school assignment we made a game that looks and feels good. And because we all five enjoy rhythm games we decided to choose this.
-                    We named our game Disco Jam, why the name Disco jam? Disco Jam Is based on 80s disco, Jamming can be dancing but can also be meant as fighting.
+                <p>For this school assignment we made a game that looks and feels good. And because we all five enjoy
+                    rhythm games we decided to choose this.
+                    We named our game Disco Jam, why the name Disco jam? Disco Jam Is based on 80s disco, Jamming can be
+                    dancing but can also be meant as fighting.
                 </p>
                 <p>The game will be like Streetfighter and guitar hero.</p>
-                <p>There are arrows that move upwards, and you have to hit them in the circle to get points and when the arrow is perfect in the circle you get 2 points.
-                    With the points you can activate an attack on the opponent. The player loses hp if the other person gets hit by an attack
+                <p>There are arrows that move upwards, and you have to hit them in the circle to get points and when the
+                    arrow is perfect in the circle you get 2 points.
+                    With the points you can activate an attack on the opponent. The player loses hp if the other person
+                    gets hit by an attack
                     The Players play this until one dies or if the song is finished. Highest HP wins!
                     If the hp is the same, then the player with the highest score wins.
-                    </p>
+                </p>
 
-                <br>
-                <h2>Nederlands</h2>
-                <p>voor deze schoolopdracht hebben we een spel dat er goed uitziet en goed aanvoelt. En omdat we alle vijf van ritmespelletjes houden, hebben we besloten om dit te kiezen. We hebben onze game Disco Jam genoemd, waarom de naam Disco Jam? Disco Jam is gebaseerd op 80's disco, Jamming kan dansen zijn maar ook als vechten bedoeld zijn.</p>
-                    <p>het spel is gebaseerd op Streetfighter en Guitar hero</p>
-                    <p>Er zijn pijlen die naar boven bewegen, en je moet ze in de cirkel raken om punten te krijgen en als de pijl perfect in de cirkel is krijg je 2 punten.
-                        Met de punten kun je een aanval op de tegenstander activeren. De speler verliest hp als de andere persoon wordt geraakt door een aanval
-                        De spelers spelen dit totdat iemand sterft of als het nummer is afgelopen. Hoogste HP wint!
-                        Als het aantal pk's gelijk is, wint de speler met de hoogste score.</p>
-            </div>
+                </div>
             <div class="imagewindow">
                 <iframe width="420" height="315" src="https://www.youtube.com/embed/-PwrcZD0H-U">
                 </iframe>
