--- a/index.html
+++ b/index.html
@@ -96,63 +96,63 @@
                 <div class="work--lockup">
                   <ul class="slider">
                     <li class="slider--item slider--item-left">
-                      <a href="old site/platformer.html">
+                      <a href="Pages/platformer.html">
                         <div class="slider--item-image">
-                          <img src="old site/images/Platformer/logonew.png" alt="Victory">
+                          <img src="Pages/images/Platformer/logonew.png" alt="Victory">
                         </div>
                         <p class="slider--item-title">Platformer</p>
                         <p class="slider--item-description">A 2d platformer game made for a arcade cabin.</p>
                       </a>
                     </li>
                     <li class="slider--item slider--item-center">
-                      <a href="/old site/projectarcade.html">
+                      <a href="Pages/projectarcade.html">
                         <div class="slider--item-image">
-                          <img src="old site/images/ProjectArcade/logonew.png" alt="Metiew and Smith">
+                          <img src="Pages/images/ProjectArcade/logonew.png" alt="Metiew and Smith">
                         </div>
                         <p class="slider--item-title">Project Arcade</p>
                         <p class="slider--item-description">A project game made for a arcade cabin. mixes rhythm and fighter genre</p>
                       </a>
                     </li>
                     <li class="slider--item slider--item-right">
-                      <a href="/old site/projectdata.html">
+                      <a href="Pages/projectdata.html">
                         <div class="slider--item-image">
-                          <img src="old site/images/ProjectData/logonew.png" alt="Alex Nowak">
+                          <img src="Pages/images/ProjectData/logonew.png" alt="Alex Nowak">
                         </div>
                         <p class="slider--item-title">Project Data</p>
                         <p class="slider--item-description">A data visualizer that uses svg files to read data</p>
                       </a>
                     </li>
                     <li class="slider--item slider--item">
-                      <a href="/old site/Expositie.html ">
+                      <a href="Pages/Expositie.html ">
                         <div class="slider--item-image">
-                          <img src="old site/images/expo/click.png" alt="Alex Nowak">
+                          <img src="Pages/images/expo/click.png" alt="Alex Nowak">
                         </div>
                         <p class="slider--item-title">SteenTijdExpo</p>
                         <p class="slider--item-description">a Expo that i made for a museum. it made the NOS news</p>
                       </a>
                     </li>
                     <li class="slider--item slider--item">
-                      <a href="/old site/ddwTour.html ">
+                      <a href="Pages/ddwTour.html ">
                         <div class="slider--item-image">
-                          <img src="old site/images/ddwTour/Logo.png" alt="Alex Nowak">
+                          <img src="Pages/images/ddwTour/Logo.png" alt="Alex Nowak">
                         </div>
                         <p class="slider--item-title">DDW tour</p>
                         <p class="slider--item-description">Small AR experience that i made for the DutchDesignWeek</p>
                       </a>
                     </li>
                     <li class="slider--item slider--item">
-                      <a href="/old site/RabbitSimulator.html ">
+                      <a href="Pages/RabbitSimulator.html ">
                         <div class="slider--item-image">
-                          <img src="old site/images/RabbitSim/ShowCase02.png" alt="Alex Nowak">
+                          <img src="Pages/images/RabbitSim/ShowCase02.png" alt="Alex Nowak">
                         </div>
                         <p class="slider--item-title">Rabbit Simulator</p>
                         <p class="slider--item-description">First simulator game that i made in 4 weeks that simulates natural selection</p>
                       </a>
                     </li>
                     <li class="slider--item slider--item">
-                      <a href="/old site/vrgame.html ">
+                      <a href="Pages/vrgame.html ">
                         <div class="slider--item-image">
-                          <img src="old site/images/Vr_Game/VrGame_Logo.jpg" alt="Alex Nowak">
+                          <img src="Pages/images/Vr_Game/VrGame_Logo.jpg" alt="Alex Nowak">
                         </div>
                         <p class="slider--item-title">VR Game</p>
                         <p class="slider--item-description">My first VR game that i made.</p>
